--- a/front-end/my-app/package.json
+++ b/front-end/my-app/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
-    "three": "^0.121.1"
+    "three": ">=0.125.0"
   },
   "scripts": {
     "start": "react-scripts start",
